--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="project-section" id="projects">
             <h2 class="page-header">Projects</h2>
             <div class="project-container">
-                <div class="project-card" id="project1" style="background-image: url(/images/weatherApp.png);">
+                <div class="project-card" id="project1" style="background-image: url(./images/weatherApp.png);">
                     <div class="project-number project-number-right">01</div>
                     <div class="project-content project-content-left">
                         <div class="project-skils-container">
