major changes for responsivenes

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div id="skills" class="container skills-container">
             <div class="skill-fade-text">Skills</div>
             <div class="skill-container-left">
-                <h2 class="sill-heading">
+                <h2 class="skill-heading">
                     <span class="caps">M</span>e and
                     <br>
                     MyTech Stack
@@ -291,7 +291,7 @@
                 backDelay: 1000,
               });
 
-            
+            console.log(typeData);
     </script>
 </body>
 </html>
