--- a/index.html
+++ b/index.html
@@ -163,14 +163,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="project-card" id="project4" style="background-image: url(./images/myntraClone.png);">
+                <div class="project-card" id="project4" style="background-image: url(./images/Screenshot\ 2024-08-04\ 205122.png);">
                     <div class="project-number project-number-left">04</div>
                     <div class="project-content project-content-right">
                         <div class="project-skils-container">
                             <!-- <img src="./images/Express.png" alt="" class="project-skill">
                             <img src="./images/MongoDB.svg" alt="" class="project-skill">
-                            <img src="./images/NodeJs.svg" alt="" class="project-skill">
-                            <img src="./images/React.png" alt="" class="project-skill"> -->
+                            <img src="./images/NodeJs.svg" alt="" class="project-skill">-->
+                            <img src="./images/React.png" alt="" class="project-skill"> 
                             <img src="./images/HTML.png" alt="" class="project-skill">
                             <img src="./images/CSS.png" alt="" class="project-skill">
                             <img src="./images/Javascript.svg" alt="" class="project-skill">
