--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                             <img src="./images/Javascript.svg" alt="" class="project-skill">
                             <!-- <img src="./images/Tailwind.png" alt="" class="project-skill"> -->
                         </div>
-                        <h2 class="project-heading">Myntra Clone</h2> 
-                        <div class="project-subHeading">I's a clone of myntra</div>
+                        <h2 class="project-heading">Plan Tour With Me</h2> 
+                        <div class="project-subHeading">It's basic react app which is based upon learnings of useState</div>
                         <div class="btn-grp">
                             <button  class="btn-pink btn-project" onclick='swal({
                                 title: "Myntra Clone",
