--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 className: "swal"
                                 
                                     });'>Read More</button>
-                            <a href="https://saurav12-7.github.io/Tour/" target="_blank"><i title="GitHubLink" class="fa-brands fa-github icon"></i></a>
+                            <a href="https://saurav12-7.github.io/Travel_tour/" target="_blank"><i title="GitHubLink" class="fa-brands fa-github icon"></i></a>
                             <!-- <a href=""><i title="Live Link" class="fa-solid fa-link icon"></i></a> -->
                         </div>
                     </div>
